# lachart_txt_parser

./: .gitignore  LICENSE  README.md  pyproject.toml  template.Rproj
examples/: example_usage.py
src/labchart_parser/: __init__.py  core.py  exceptions.py  parser.py
