[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "labchart_parser"
version = "0.1.0"
description = "Parser for ADInstruments LabChart text exports"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    {name = "Damien Bachasson", email = "damien.bachasson@gmail.com"}
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
keywords = ["LabChart", "parser", "ADInstruments", "physiology", "signals"]

[tool.setuptools.packages.find]
where = ["src"]